# A-Claude-Code-plugin-for-systematic-academic-paper-discovery-and-analysis

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  requirements.txt  ruff.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: paper-analyzer.md
.claude/skills/analyzing-papers/: SKILL.md
.claude/skills/searching-ml-papers/: SKILL.md
analyzing-papers/scripts/: extract_data.py  select_input.py  statistical_tools.py
docs/: architecture.md
hooks/: hooks.json
scripts/: setup.sh
searching-papers-v2/: .gitignore  arxiv_client.py  example_workflow.py  openalex_client.py
searching-papers-v2/scripts/: citation_expand.py  deduplicate_sources.py  filter_citations.py
searching-papers-v2/utils/: deduplication.py
skills/analyzing-papers/: SKILL.md
skills/analyzing-papers/docs/: template.md
skills/analyzing-papers/tools/: pyproject.toml  test_build_network.py
skills/analyzing-papers/tools/scripts/: build_network.py  extract_temporal.py  graph_algorithms.py
skills/searching-ml-papers/: SKILL.md
skills/searching-ml-papers/tools/: pyproject.toml  semantic_scholar_client.py  test_multi_search.py
skills/searching-ml-papers/tools/scripts/: create_session.py  multi_search.py  summarize_results.py
skills/searching-ml-papers/tools/utils/: embeddings.py  query_builder.py
