[project]
name = "searching-ml-papers-tools"
version = "1.0.0"
description = "Multi-source academic paper search tools for Research Companion"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32.0",
    "click>=8.0.0",
    "arxiv>=2.4.0",
    "numpy>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/modaribrahim/A-Claude-Code-plugin-for-systematic-academic-paper-discovery-and-analysis"
Repository = "https://github.com/modaribrahim/A-Claude-Code-plugin-for-systematic-academic-paper-discovery-and-analysis"
